svg 하드코딩 삭제

--- a/templates/chatbot-admin/menu06.html
+++ b/templates/chatbot-admin/menu06.html
@@ -305,16 +305,7 @@
         <!-- 페이지네이션 -->
         <div class="pagination">
           <button class="pagination__button-prev">
-            <svg
-              width="20"
-              height="20"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path d="M12 18L6 12L12 6" stroke="#1b00ff" stroke-width="1.5" />
-              <path d="M18 18L12 12L18 6" stroke="#1b00ff" stroke-width="1.5" />
-            </svg>
+            <img src="../../static/chatbot-admin/images/prev-arrow.svg" />
           </button>
           <button class="pagination__button pagination__button--active">
             1
@@ -324,16 +315,7 @@
           <button class="pagination__button">4</button>
           <button class="pagination__button">5</button>
           <button class="pagination__button-next">
-            <svg
-              width="20"
-              height="20"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path d="M12 18L18 12L12 6" stroke="#1b00ff" stroke-width="1.5" />
-              <path d="M6 18L12 12L6 6" stroke="#1b00ff" stroke-width="1.5" />
-            </svg>
+            <img src="../../static/chatbot-admin/images/last-arrow.svg" />
           </button>
         </div>
       </section>
