--- a/static/chatbot-front/css/index.css
+++ b/static/chatbot-front/css/index.css
@@ -25,6 +25,7 @@
   width: 230px;
   margin: 0 auto;
   padding-left: 30px;
+  user-select: none;
 }
 
 .content__title {
@@ -33,6 +34,7 @@
   font-size: 22px;
   font-weight: 700;
   color: #000;
+  user-select: none;
 }
 
 .content__select {
@@ -46,15 +48,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 250px;
-  height: 60px;
+  width: 280px;
+  height: 70px;
   margin: 30px auto;
   padding: 10px;
-  border: 1px solid #000;
-  border-radius: 8px;
-  background-color: #fff;
+  border-radius: 18px;
+  background-color: #4e5784;
+  border: 1px solid #4e5784;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   font-size: 26px;
-  font-weight: 700;
-  color: #000;
+  font-weight: 600;
+  color: #ffffff;
   cursor: pointer;
+  user-select: none;
+
+  &:hover {
+    background-color: #3c4366;
+    border: 1px solid #3c4366;
+  }
 }
