--- a/static/chatbot-admin/css/menu02.css
+++ b/static/chatbot-admin/css/menu02.css
@@ -150,7 +150,7 @@
   align-items: flex-start;
   width: 55%;
   height: auto;
-  padding-right: 20px;
+  padding-right: 10px;
   border-right: 1px solid #1b3133;
 }
 
@@ -160,7 +160,7 @@
   align-items: flex-start;
   width: 45%;
   height: auto;
-  padding-left: 20px;
+  padding-left: 10px;
 }
 
 .content-modify__form-doc-title,
@@ -298,7 +298,8 @@
 }
 
 .usage-history__table-item--list,
-.usage-history__table-item--docs {
+.usage-history__table-item--docs,
+.usage-history__table-item--status {
   gap: 5px;
 }
 
@@ -335,6 +336,12 @@
   width: 75%;
 }
 
+.usage-history__table-item--list.attach-data {
+  width: 75%;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
 .usage-history__table-item--delete.attach {
   width: 20%;
 }
@@ -363,4 +370,55 @@
   align-items: center;
   padding: 0 20px;
   border-bottom: 1px solid #d4d4d4;
+}
+
+.form-table-container,
+.attach-table-container {
+  position: relative;
+  display: flex;
+  width: 100%;
+}
+
+.select-content {
+  position: absolute;
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+  bottom: -10px;
+  border-radius: 0 0 8px 8px;
+  background-color: #444646;
+  width: 100%;
+  height: 30px;
+  padding: 0 15px;
+}
+
+.select-content-text {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.select-content-button button {
+  width: 50px;
+  height: 20px;
+  cursor: pointer;
+  margin-left: 5px;
+  font-weight: 600;
+  border-radius: 15px;
+  font-size: 13px;
+}
+
+.deselect-button {
+  background-color: #fff;
+  color: #1b3133;
+}
+
+.download-button {
+  background-color: #cacaca;
+  color: #1b3133;
+}
+
+.delete-button {
+  background-color: #000;
+  color: #fff;
 }
