--- a/static/chatbot-front/css/start.css
+++ b/static/chatbot-front/css/start.css
@@ -34,7 +34,9 @@
   align-items: center;
   width: 100%;
   height: 360px;
-  border: 1px solid #000;
+  background-color: #4e5784;
+  border: 1px solid #4e5784;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
   margin: 30px auto;
   padding: 20px;
@@ -45,7 +47,7 @@
   text-align: center;
   font-size: 20px;
   font-weight: 700;
-  color: #000;
+  color: #fff;
   margin: 15px auto;
 }
 
@@ -61,12 +63,19 @@
   align-items: center;
   width: 100%;
   height: 60px;
-  border: 1px solid #000;
+  border: 1px solid #4e5784;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #4e5784;
   font-size: 24px;
   font-weight: 700;
-  color: #000;
+  color: #fff;
   cursor: pointer;
   text-decoration: none;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+  &:hover {
+    background-color: #3c4366;
+    border: 1px solid #3c4366;
+  }
 }
