--- a/templates/chatbot-admin/menu07.html
+++ b/templates/chatbot-admin/menu07.html
@@ -2,7 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewpor
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      as="style"
+      crossorigin
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css"
+    />
+    <link rel="stylesheet" href="../../static/chatbot-admin/css/common.css" />
+    t" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/common.css" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/menu07.css" />
     <title>대행 신청 업체</title>
@@ -133,6 +145,16 @@
                   />
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+        <!-- 모달 창 -->
+        <div class="modal-background save">
+          <div class="modal">
+            <div class="modal-text">해당 내용을 저장 하시겠습니까?</div>
+            <div class="buttonDiv">
+              <button id="modalCancelButton">취소</button>
+              <button id="modalSaveButton">저장</button>
             </div>
           </div>
         </div>
