--- a/templates/chatbot-admin/menu02.html
+++ b/templates/chatbot-admin/menu02.html
@@ -366,24 +366,20 @@
                         <td
                           class="usage-history__table-item usage-history__table-item--list"
                         >
-                          사증발급 신청서<img
-                            src="../../static/chatbot-admin/images/refresh.svg"
+                          <button class="extra-button">기타</button
+                          ><img
+                            src="../../static/chatbot-admin/images/Check_fill.svg"
                           />
                         </td>
                         <td
                           class="usage-history__table-item usage-history__table-item--docs"
                         >
-                          사증발급 신청서.docs
-                          <img
-                            src="../../static/chatbot-admin/images/Check_fill.svg"
-                          />
+                          <button class="upload-button">업로드</button>
                         </td>
                         <td
                           class="usage-history__table-item usage-history__table-item--status"
                         >
-                          다운 허용<img
-                            src="../../static/chatbot-admin/images/refresh.svg"
-                          />
+                          다운 금지
                         </td>
                         <td
                           class="usage-history__table-item usage-history__table-item--delete"
