--- a/templates/chatbot-front/start.html
+++ b/templates/chatbot-front/start.html
@@ -16,23 +16,14 @@
           class="logo"
         />
         <div class="description__container">
+          <span class="description__text">안녕하세요.</span>
           <span class="description__text"
-            >국내최고 이민행정전문가와 <br />
-            챗GPT가 만난 비자24입니다.</span
+            >국내최고 이민행정전문가 & 챗GPT 기반<br />
+            정보제공 플랫폼서비스, 비자24 입니다.</span
           >
           <span class="description__text"
-            >복잡한 출입국외국인청 비자<br />
-            신청에 필요한 필수서류는 <br />
-            비자24에서 확인하세요.</span
-          >
-          <!-- <span class="description__text"
-            >법무부출입국업무 대행기관<img
-              src="../../static/chatbot-front/images/moj.png"
-              class="description__image"
-          /></span> -->
-          <span class="description__text"
-            >서류작성과 출입국업무대행도 즉시 <br />
-            신청 가능한 챗봇플랫폼, 비자24입니다.</span
+            >복잡한 출입국 비자 신청서류<br />
+            비자24에서 쉽게 알려드립니다.</span
           >
         </div>
         <a href="./chatbot.html" class="start-button">시작하기</a>
