--- a/templates/chatbot-admin/menu07.html
+++ b/templates/chatbot-admin/menu07.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewpor
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
@@ -14,7 +14,6 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css"
     />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/common.css" />
-    t" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/common.css" />
     <link rel="stylesheet" href="../../static/chatbot-admin/css/menu07.css" />
     <title>대행 신청 업체</title>
